--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,10 +39,9 @@
             <a class="nav-link" href="#">หน้าแรก <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/page1">ข่าวประชาสัมพันธ์</a>
-            
-              
-            
+            <a class="nav-link" href="index.ejs">ข่าวประชาสัมพันธ์</a>
+
+
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -143,7 +142,7 @@
           </div>
           <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
             <br><b>กิจกรมมเวียนเทียนใน วันอาสาฬหบูชา วัดอินทขีลสะดือเมือง เชียงใหม่ <mt-3></b></br>
-           <br> </br><img
+            <br> </br><img
               src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.15752-9/67269830_365832980754587_6581003543837147136_n.jpg?_nc_cat=110&_nc_eui2=AeGiDvB6EW_5PzFaySoRzUsTXh2TF6GFFejpSR2cPu5Nouw5Flja-vNyRr0_BDgOYAwT8S5YvcWVKmlKIrag4OMMVIGbfzCecEcdI7NGm3oVhA&_nc_oc=AQmz_QyVqZPwBQD8C8LH0c3CNpkC0WlmB2rMpxVakMUnTcoMoUBtftx33-XNdRwT2No&_nc_ht=scontent.fbkk10-1.fna&oh=d407bb2f2deebd65fdf6cc7194b81681&oe=5DAA8D14"
               class="d-block w-100" alt="..." />
             </p>
@@ -180,7 +179,6 @@
 
 
 
-
           </div>
         </div>
         <div class="row mt-3">
@@ -191,12 +189,11 @@
                 <h5 class="card-title"> รูปภาพวัดอินทขีลสะดือเมือง</h5>
                 <p class="card-text">
 
-
                   <img
                     src="https://scontent.fbkk10-1.fna.fbcdn.net/v/t1.15752-9/s2048x2048/67437663_2535511783138358_4997739347101876224_n.jpg?_nc_cat=102&_nc_oc=AQmtdDHzj1YhKhsjNeU_IdfueyvGZjTfCOE-aUpCdhrDFujdG-sJ3AWxzjip8poy4Go&_nc_ht=scontent.fbkk10-1.fna&oh=71cc7bc7a754cdb55a99108d856e519d&oe=5DADFA58"
                     class="d-block w-100" alt="..." />
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">อ่านข่าว</a>
               </div>
             </div>
           </div>
@@ -210,8 +207,9 @@
                   <img
                     src="https://scontent.fbkk14-1.fna.fbcdn.net/v/t1.15752-9/67538418_580289572502863_4673531747898490880_n.png?_nc_cat=106&_nc_eui2=AeE5LRHT5YZbGRcK3reYO7cfKhb2t7I19ghYU1TNIvMnbu_q3lr0W7FUtZpdI_a0NVRZ0pwRwiD2Mro9IEx6NA0Pv-nOfFsb1JQZhSI_xw_TxA&_nc_oc=AQl5MOP950OuDJps-KzA_mjWXx36Fs0c1pSHSfnVRTF-Nvb03CIuOdDvQaodqe0EEPU&_nc_ht=scontent.fbkk14-1.fna&oh=9ff62303e260c3550645d35a10b7ba8f&oe=5DE7320C"
                     class="d-block w-100" alt="..." />
+                    
                 </p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <a href="#" class="btn btn-primary">อ่านข่าว</a>
               </div>
             </div>
           </div>
@@ -238,23 +236,25 @@
     <div class="footer border bg-light mt-3 rounded">
       <div class="row p-4">
         <div class="col-4">
-          <h4>ลิงค์ด่วน</h4>
+          <h4>เสียงบทสวดมนต์</h4>
           <ul class="list-unstyled">
-            <li><a href="#">หน้าหลัก</a></li>
-            <li><a href="#">ทดสอบ</a></li>
-            <li><a href="#">ทดสอบ</a></li>
-            <li><a href="#">ทดสอบ</a></li>
-            <li><a href="#">ทดสอบ</a></li>
+            <li><a target=_blank
+                href="https://www.dhammaprayer.com/%E0%B8%9A%E0%B8%97%E0%B8%AA%E0%B8%A7%E0%B8%94%E0%B8%A1%E0%B8%99%E0%B8%95%E0%B9%8C%E0%B8%81%E0%B9%88%E0%B8%AD%E0%B8%99%E0%B8%99%E0%B8%AD%E0%B8%99/?fbclid=IwAR0tzdWA_giinMgBEc0YUAEY5lsGy81aRtnG3mCKWlvuKXgH0NUbpbrn0Dk">บทสวดมนต์ก่อนนอน</a>
+            </li>
+            <li><a target=_blank
+                href="https://www.dhammaprayer.com/%E0%B8%9A%E0%B8%97%E0%B8%AA%E0%B8%A7%E0%B8%94%E0%B8%A1%E0%B8%99%E0%B8%95%E0%B9%8C-%E0%B9%80%E0%B8%9B%E0%B8%A5%E0%B8%B5%E0%B9%88%E0%B8%A2%E0%B8%99%E0%B8%8A%E0%B8%B5%E0%B8%A7%E0%B8%B4%E0%B8%95/?fbclid=IwAR2rWXQOSf8CK3TCFQ09XAKqmfKE6nGG56BsfyldJlSbimXR0_S30jqQoFE">บทสวดมนต์เปลี่ยนชีวิต</a>
+            </li>
+            <li><a target=_blank href="https://www.dhammaprayer.com/%E0%B8%9F%E0%B8%B1%E0%B8%87%E0%B9%80%E0%B8%97%E0%B8%A8%E0%B8%99%E0%B9%8C-%E0%B8%9F%E0%B8%B1%E0%B8%87%E0%B8%98%E0%B8%A3%E0%B8%A3%E0%B8%A1/?fbclid=IwAR0BaHh1Uki8Vw6CtzOseY-ygUpjwgDO3IiMw0xAjOh2ABzwYP0dzv9rcpA">ฟังเทศน์ ฟังธรรม</a></li>
+            
           </ul>
         </div>
         <div class="col-4">
           <h4>ลิงค์น่าสนใจ</h4>
           <ul class="list-unstyled">
-            <li><a href="#">หน้าหลัก</a></li>
-            <li><a href="#">ทดสอบ</a></li>
-            <li><a href="#">ทดสอบ</a></li>
-            <li><a href="#">ทดสอบ</a></li>
-            <li><a href="#">ทดสอบ</a></li>
+            <li><a target=_blank href="https://www.springnews.co.th/thailand/526128">คำถวายเทียนพรรษา</a></li>
+            <li><a target=_blank href="https://dhamma.mthai.com/pray/797.html">คําถวายสังฆทาน</a></li>
+            <li><a target=_blank href="https://dhamma.mthai.com/pray/5165.html">คําสมาทานศีล</a></li>
+
           </ul>
         </div>
         <div class="col-4">
@@ -266,7 +266,9 @@
           </address>
         </div>
       </div>
-      <p class="p-3">&copy; สงวนสิทธิ์ 2019</p>
+      <p class="p-3">&copy; สงวนสิทธิ์ 2019, สาขาวิชาเทคโนโลยีสารสนเทศ <br>
+        ภาควิชาคอมพิวเตอร์, คณะวิทยาศาสตร์และเทคโนโลยี, <br>มหาวิทยาลัยราชภัฏเชียงใหม่
+      </p>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
